feat(core): file_header check

--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -184,6 +184,7 @@
                 <filtering>true</filtering>
                 <includes>
                     <include>shoulder-version.txt</include>
+                    <include>META-INF/*</include>
                 </includes>
             </resource>
         </resources>
