--- a/shoulder-build/shoulder-base/shoulder-validation/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-validation/pom.xml
@@ -43,6 +43,19 @@
             <artifactId>resteasy-validator-provider</artifactId>
         </dependency>-->
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
 
