feat(validate): 文件校验完善、日志接口增加基础方法

--- a/shoulder-build/shoulder-base/shoulder-validation/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-validation/pom.xml
@@ -31,6 +31,8 @@
             <artifactId>tika-core</artifactId>
         </dependency>
 
+        <!-- jmimemagic -->
+
         <!--<dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
