feat(batch): 增加持久层隔离接口，提供默认实现（未完善），添加自动装配

--- a/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
@@ -76,6 +76,12 @@
         </dependency>
 
         <dependency>
+            <groupId>cn.itlym</groupId>
+            <artifactId>shoulder-batch</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
             <optional>true</optional>
