--- a/shoulder-build/shoulder-base/shoulder-batch/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-batch/pom.xml
@@ -142,6 +142,18 @@
             </plugin>
 
         </plugins>
+
+        <!-- 构建时自动添加 shoulder 版本号 -->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <includes>
+                    <include>META-INF/export-localize.json</include>
+                </includes>
+            </resource>
+        </resources>
+
     </build>
 
 
