--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -87,6 +87,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- 获取方法行号使用 -->
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- ============================ test ============================ -->
 
         <dependency>
