--- a/shoulder-build/shoulder-starters/shoulder-starter-auth-token/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-auth-token/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>nimbus-jose-jwt</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>cn.itlym</groupId>
+            <artifactId>shoulder-crypto</artifactId>
+        </dependency>
+
         <!-- resourceServer -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
