doc(security): 增加说明，调整版本

--- a/shoulder-build/shoulder-base/shoulder-cluster/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-cluster/pom.xml
@@ -23,6 +23,8 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>3.13.6</version>
+            <optional>true</optional>
+            <!--<version>3.14.0</version>-->
         </dependency>
 
         <dependency>
