--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -22,11 +22,11 @@
 
         <spring-boot.version>2.3.5.RELEASE</spring-boot.version>
         <!-- 由于Spring Boot提供了Maven BOM来管理依赖版本，因此您无需指定版本 -->
-        <!--<spring-security.version></spring-security.version>-->
+        <!--<spring-security.version>2.3.5</spring-security.version>-->
 
         <!-- 与 boot 版本对应关系 https://start.spring.io/actuator/info -->
         <!-- 最新 spring cloud 版本：https://spring.io/projects/spring-cloud#learn -->
-        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
 
         <!-- build -->
         <java.version>11</java.version>
@@ -370,6 +370,22 @@
                 <artifactId>springdoc-openapi-security</artifactId>
                 <version>${springdoc-openapi.version}</version>
             </dependency>-->
+
+
+            <!-- oauth2 授权服务器相关依赖 -->
+            <dependency>
+                <groupId>org.springframework.security.oauth.boot</groupId>
+                <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+                <version>2.3.5.RELEASE</version>
+                <optional>true</optional>
+            </dependency>
+
+            <!-- spring-security-oauth 授权服务器 -->
+            <dependency>
+                <groupId>org.springframework.security.oauth</groupId>
+                <artifactId>spring-security-oauth2</artifactId>
+                <version>2.3.5.RELEASE</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.nimbusds</groupId>
