--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-framework</artifactId>
-        <version>0.5-SNAPSHOT</version><!-- shoulder-version -->
+        <version>0.5</version><!-- shoulder-version -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -40,7 +40,7 @@
             <dependency>
                 <groupId>cn.itlym</groupId>
                 <artifactId>shoulder-dependencies</artifactId>
-                <version>0.5-SNAPSHOT</version><!-- shoulder-version -->
+                <version>0.5</version><!-- shoulder-version -->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -198,7 +198,7 @@
                         <execution>
                             <id>attach-sources</id>
                             <!--<phase>package</phase>--><!-- docs / source -->
-                            <phase>deploy</phase><!-- docs / source -->
+                            <phase>verify</phase><!-- docs / source -->
                             <goals>
                                 <goal>jar</goal>
                                 <goal>jar-no-fork</goal>
@@ -246,7 +246,7 @@
                         <execution>
                             <id>attach-javadocs</id>
                             <!--<phase>package</phase>--><!-- docs / source -->
-                            <phase>deploy</phase><!-- docs / source -->
+                            <phase>verify</phase><!-- docs / source -->
                             <goals>
                                 <goal>jar</goal>
                             </goals>
@@ -259,20 +259,20 @@
                 </plugin>
 
                 <!-- GPG  maven中央仓库发布安全签名插件 -->
-                <!--<plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
                     <version>${maven-gpg-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>sign-artifacts</id>
-                            <phase>deploy</phase>&lt;!&ndash; gpg phase verify deploy &ndash;&gt;
+                            <phase>verify</phase><!-- gpg phase verify deploy -->
                             <goals>
                                 <goal>sign</goal>
                             </goals>
                         </execution>
                     </executions>
-                </plugin>-->
+                </plugin>
 
                 <!-- findbugs 检查代码问题 -->
                 <plugin>
