doc(0.5) 依赖版本调整、注释中javaDoc规范、准备发布

--- a/pom.xml
+++ b/pom.xml
@@ -262,7 +262,7 @@
                 <extensions>true</extensions>
 
                 <configuration>
-                    <serverId>nexus</serverId>
+                    <serverId>oss</serverId>
                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                     <stagingProfileId>xxx</stagingProfileId>
                     <!--<stagingDescription>preRelease</stagingDescription>-->
