--- a/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>0.5</version><!-- shoulder-version -->
+        <version>0.6-SNAPSHOT</version><!-- shoulder-version -->
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
 
