--- a/shoulder-build/shoulder-base/shoulder-operation-log/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-operation-log/pom.xml
@@ -20,6 +20,13 @@
             <artifactId>shoulder-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
     </dependencies>
 
 
