--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -66,6 +66,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
             <optional>true</optional>
