feat(core): 全局线程池增强器，并实现 core 上下文跨线程、操作日志变量跨线程

--- a/shoulder-build/shoulder-base/shoulder-api-doc/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-api-doc/pom.xml
@@ -18,17 +18,6 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-core</artifactId>
-        </dependency>
-
-        <!-- 实际上只直接依赖 swagger 注解 -->
-        <!--<dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-        </dependency>-->
-
         <!--Knife4j-->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
@@ -39,24 +28,13 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
+            <!--<exclusions>
+                <exclusion>
+                    <groupId>io.springfox</groupId>
+                    <artifactId>springfox-swagger-ui</artifactId>
+                </exclusion>
+            </exclusions>-->
         </dependency>
 
     </dependencies>
