--- a/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
@@ -93,6 +93,19 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- ============================= api doc ============================= -->
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- ============================= security ============================= -->
         <dependency>
             <groupId>cn.itlym</groupId>
@@ -136,7 +149,6 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
 
     </dependencies>
 
