feat: 添加错误码插件，暂时 SNAPSHOT

--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/src/main/resources/application.yml
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/src/main/resources/application.yml
@@ -12,4 +12,5 @@ spring:
 shoulder:
   application:
     id: ${spring.application.name}
-    errorCodePrefix: '0x000b' # unique code to mark a application
+    # unique code to mark a application
+    errorCodePrefix: @errorCodePrefix@
