--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
@@ -20,6 +20,8 @@
     <properties>
         <java.version>11</java.version>
         <shoulder.version>0.6-SNAPSHOT</shoulder.version><!-- shoulder-version -->
+
+        <errorCodePrefix>0x000b</errorCodePrefix>
     </properties>
 
     <dependencies>
@@ -44,6 +46,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+
+            <!-- 自动生成错误码以及对应的翻译 可以在 target 目录生成所有实现 ErrorCode 接口错误码枚举类的翻译文件 -->
+            <plugin>
+                <groupId>cn.itlym.shoulder</groupId>
+                <artifactId>errcode-maven-plugin</artifactId>
+                <configuration>
+                    <errorCodePrefix>${errorCodePrefix}</errorCodePrefix>
+                    <scanPackage>${package}</scanPackage>
+                    <useCache>true</useCache>
+                </configuration>
+            </plugin>
+
         </plugins>
 
         <resources>
