--- a/shoulder-build/shoulder-base/shoulder-batch/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-batch/pom.xml
@@ -175,6 +175,16 @@
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
 
+            <!-- 自动生成错误码以及对应的翻译 可以在 target 目录生成所有实现 ErrorCode 接口错误码枚举类的翻译文件 -->
+            <plugin>
+                <groupId>cn.itlym.shoulder</groupId>
+                <artifactId>errcode-maven-plugin</artifactId>
+                <configuration>
+                    <errorCodePrefix>${shoulder-framework.errcode-prefix}</errorCodePrefix>
+                    <scanPackage>org.shoulder.batch</scanPackage>
+                </configuration>
+            </plugin>
+
         </plugins>
 
         <!-- 构建时包含进 export-localize.json -->
