--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -226,6 +226,13 @@
                 <version>${shoulder.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>cn.itlym</groupId>
+                <artifactId>shoulder-monitor</artifactId>
+                <version>${shoulder.version}</version>
+            </dependency>
+
+
             <!--shoulder-base end -->
 
 
