--- a/shoulder-build/shoulder-base/pom.xml
+++ b/shoulder-build/shoulder-base/pom.xml
@@ -34,6 +34,7 @@
         <module>shoulder-batch</module>
 
         <module>shoulder-api-doc</module>
+        <module>shoulder-monitor</module>
     </modules>
 
 </project>
