refactor(error): 更新异常类：构造器优化、错误码调整 fix(i18n):  使用应用默认编码读取配置文件，避免乱码 feat(log): 添加调用日志拦截器、添加记录 throw 语法糖方法 feat(util): 添加异常格式化工具、添加断言工具、ContextUtil 标注返回值是否可空 fix(test): 修复单测 feat(validator): 添加校验工具类

--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -298,10 +298,16 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-Xms256m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=64m -Dfile.encoding=utf-8</argLine>
                         <includes>
-                            <include>**/*TestSuite.java</include>
+                            <include>**/*Test.java</include>
+                            <include>**/*Test.groovy</include>
+                            <include>**/*Spec.*</include>
                         </includes>
+                        <forkMode>always</forkMode>
+                        <argLine>-Xms256m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=64m -Dfile.encoding=utf-8</argLine>
+                        <argLine>--add-modules java.xml.bind</argLine>
+                        <argLine>--add-modules java.activation</argLine>
+                        <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --illegal-access=warn</argLine>
                     </configuration>
                 </plugin>
 
