--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -41,10 +41,17 @@
         </dependency>
 
         <!-- ...................... 工具 ...................... -->
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
