--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
@@ -37,6 +37,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+            <!-- 去掉不推荐的 junit4 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
